# fast-seguros-automation

./: .gitignore  LICENSE  README.md  auto_seg.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Anotações/: código_executável.txt  código_temp.txt
Base_Clientes/: Clientes.xlsx
Cotações_Clientes/: Cotacoes_Auto.xlsx  Cotacoes_Consorcio.xlsx  Cotacoes_Frota.xlsx  Cotacoes_Vida.xlsx
